--- a/follow-along/core-spring-security/src/main/resources/application.yml
+++ b/follow-along/core-spring-security/src/main/resources/application.yml
@@ -4,3 +4,20 @@ spring:
     username: postgres
     password: password
     driver-class-name: org.postgresql.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate:
+        show_sql: true
+        format_sql: true
+
+#  thymeleaf:
+#    cache: false
+
+  devtools:
+    livereload:
+      enabled: true
+    restart:
+      enabled: true
