--- a/follow-along/core-spring-security/src/main/resources/application.yml
+++ b/follow-along/core-spring-security/src/main/resources/application.yml
@@ -4,7 +4,6 @@ spring:
     username: postgres
     password: password
     driver-class-name: org.postgresql.Driver
-
   jpa:
     hibernate:
       ddl-auto: create
@@ -12,12 +11,14 @@ spring:
       hibernate:
         show_sql: true
         format_sql: true
-
 #  thymeleaf:
 #    cache: false
-
   devtools:
     livereload:
       enabled: true
     restart:
       enabled: true
+  security:
+    user:
+      password: 1111
+      name: user
