--- a/follow-along/core-spring-security/src/main/resources/application.yml
+++ b/follow-along/core-spring-security/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
         show_sql: true
@@ -18,7 +18,3 @@ spring:
       enabled: true
     restart:
       enabled: true
-  security:
-    user:
-      password: 1111
-      name: user
